use proper database in conf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # datasource
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:postgresql://postgres:5432/surveyor?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
-spring.datasource.username=surveyor
-spring.datasource.password=surveyor
+spring.datasource.url=jdbc:postgresql://postgres:5432/metric?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
+spring.datasource.username=metric
+spring.datasource.password=metric
 spring.datasource.hikari.poolName=dataPool
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.minimumIdle=3
