--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.modelmapper:modelmapper:1.1.0')
+	compile('com.zaxxer:HikariCP')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('com.h2database:h2')
