--- a/src/test_integration/resources/application.properties
+++ b/src/test_integration/resources/application.properties
@@ -1,10 +1,16 @@
 # datasource
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/metric?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
+spring.datasource.username=metric
+spring.datasource.password=metric
+spring.datasource.driverClassName=org.postgresql.Driver
 # jpa
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
 # Log
 logging.level.com.metric.assessor=DEBUG
 logging.level.org.springframework.web=DEBUG
