--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 jdk:
   - oraclejdk8
+services:
+  - postgresql
+before_script:
+  - psql -c "CREATE ROLE metric WITH LOGIN PASSWORD 'metric';" -U postgres
+  - psql -c "create database metric;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE metric TO metric;" -U postgres
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
