--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:postgresql://postgres:5432/metric?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true
 spring.datasource.username=metric
 spring.datasource.password=metric
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.hikari.poolName=dataPool
 spring.datasource.hikari.maximumPoolSize=5
 spring.datasource.hikari.minimumIdle=3
@@ -14,6 +15,10 @@ spring.datasource.hikari.idleTimeout=30000
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.format_sql=true
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+spring.jpa.properties.hibernate.format_sql=true
 
 # Log
 logging.level.com.surveyor.assessor=INFO
