switch to debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.
 spring.jpa.properties.hibernate.format_sql=true
 
 # Log
-logging.level.com.surveyor.assessor=INFO
+logging.level.com.metric.assessor=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 logging.level.org.hibernate=ERROR
